--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Header Start -->
-    <!-- TODO:1.00.40 Membuat Website Portfolio Menggunakan TAILWINDCSS 3 | NGOBAR #32 -->
+    <!-- TODO:1.20.00 Membuat Website Portfolio Menggunakan TAILWINDCSS 3 | NGOBAR #32 -->
 
     <header
       class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10"
@@ -27,10 +27,38 @@
               type="button"
               class="block absolute right-4"
             >
-              <span class="hamburger-line"></span>
-              <span class="hamburger-line"></span>
-              <span class="hamburger-line"></span>
+              <span
+                class="hamburger-line transition duration-300 ease-in-out origin-top-left"
+              ></span>
+              <span
+                class="hamburger-line transition duration-300 ease-in-out"
+              ></span>
+              <span
+                class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"
+              ></span>
             </button>
+
+            <nav
+              id="nav-menu"
+              class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full"
+            >
+              <ul class="block">
+                <li class="group">
+                  <a
+                    href="#home"
+                    class="text-base text-dark py-2 mx-8 group-hover:text-primary"
+                    >Beranda</a
+                  >
+                </li>
+                <li class="group">
+                  <a
+                    href="#home"
+                    class="text-base text-dark py-2 mx-8 group-hover:text-primary"
+                    >Beranda</a
+                  >
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
@@ -147,5 +175,7 @@
       </div>
     </section>
     <!-- About Section End -->
+
+    <script src="dist/js/script.js"></script>
   </body>
 </html>
