--- a/index.html
+++ b/index.html
@@ -205,22 +205,138 @@
     <!-- About Section End -->
 
     <!-- Portfolio Section Start -->
-    <!-- TODO: 1.32.12 -->
-    <section id="portfolio" class="pt-36 pb-16">
+    <section id="portfolio" class="pt-36 pb-16 bg-slate-100">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-wl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4">
-              <p class="font-medium text-md text-secondary">
-                Dibawah ini adalah project-project yang saya buat sendiri
-              </p>
+            <h2
+              class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl"
+            >
+              Project Terbaru
             </h2>
+            <p class="font-medium text-md text-secondary md:text-lg">
+              Dibawah ini adalah project-project yang saya buat sendiri
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto"
+        >
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="dist/portfolio/1.webp"
+                alt="Landing Page"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl texxt-dark mt-5 mb-3">
+              Landing Page Ali Yudhati
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              vero quaerat animi.
+            </p>
+          </div>
+
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="dist/portfolio/2.png"
+                alt="Landing Page"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl texxt-dark mt-5 mb-3">
+              Landing Page Ali Yudhati
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              vero quaerat animi.
+            </p>
+          </div>
+
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="dist/portfolio/1.webp"
+                alt="Landing Page"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl texxt-dark mt-5 mb-3">
+              Landing Page Ali Yudhati
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              vero quaerat animi.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="dist/portfolio/1.webp"
+                alt="Landing Page"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl texxt-dark mt-5 mb-3">
+              Landing Page Ali Yudhati
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              vero quaerat animi.
+            </p>
           </div>
         </div>
       </div>
     </section>
     <!-- Portfolio Section End -->
+
+    <!-- Clients Section Start -->
+    <section id="clients" class="pt-36 pb-32 bg-slate-800">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+            <h2
+              class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl"
+            >
+              Yang Pernah Bekerjasama
+            </h2>
+            <p class="font-medium text-md text-secondary md:text-lg">
+              Dibawah ini adalah project-project yang saya buat sendiri
+            </p>
+          </div>
+        </div>
+        <div class="w-full px-4">
+          <div class="flex flex-wrap items-center justify-center">
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100"
+              ><img src="dist/clients/Google_2015_logo.svg" alt=""
+            /></a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100"
+              ><img src="dist/clients/Google_2015_logo.svg" alt=""
+            /></a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100"
+              ><img src="dist/clients/Google_2015_logo.svg" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Clients Section End -->
+    <!-- TODO:1:46:00 -->
+    <!-- Blog Section Start -->
+    <section id="blog" class="pt-36 pb-32 bg-slate-100"></section>
+    <!-- Blog Section End -->
 
     <script src="dist/js/script.js"></script>
   </body>
